---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-02-02
  Changes:
    - Description update.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-02-02
  Changes:
    - Better compatibility with Tiered Solar System.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-02-02
  Changes:
    - Removed some unused code.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-02-02
  Changes:
    - Hidden planets and connections are now excluded from the connection redraw.
    - Compatibility with planets with no icon.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-02-02
  Changes:
    - Description update.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-02-02
  Changes:
    - Thumbnail update.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 02.02.2025
  Features:
    - Initial release.